[package]
name = "turtle-syntax"
version = "2.1.0-beta"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"
categories = ["parsing"]
keywords = ["turtle", "rdf", "parser"]
description = "RDF Turtle parser"
repository = "https://github.com/timothee-haudebourg/turtle-syntax"
documentation = "https://docs.rs/turtle-syntax"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
iref = "2.1"
locspan = "0.2.3"
langtag = "0.2"
unicase = "2.6"
rdf-types = { version = "0.1.2", features = ["loc"] }

[dev-dependencies]
codespan-reporting = "0.11.1"