[package]
name = "turtle-syntax"
version = "6.0.0"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"
categories = ["parsing"]
keywords = ["turtle", "rdf", "parser"]
description = "RDF Turtle parser"
repository = "https://github.com/timothee-haudebourg/turtle-syntax"
documentation = "https://docs.rs/turtle-syntax"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
decoded-char = "0.1.1"
iref = "2.2.3"
static-iref = "2.0.0"
locspan = "0.7.13"
langtag = "0.3.2"
unicase = "2.6"
rdf-types = { version = "0.15.1", features = ["meta"] }
xsd-types = "0.5.5"
thiserror = "1.0.38"

[dev-dependencies]
codespan-reporting = "0.11.1"
log = "0.4.17"
stderrlog = "0.5.4"
nquads-syntax = "0.13.0"